# ServerProgettoAndroid

./: CMakeLists.txt  Database_Connection.cpp  Database_Connection.h  Logger.cpp  Logger.h  TCP_Server.cpp  TCP_Server.h  main.cpp
